[package]
name = "chapter-2-hello-tail"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }
tokio-util = "0.7.7"

[[bin]]
name = "chapter-2-hello-tail"
path = "src/main.rs"
