[package]
name = "chapter-4-hello-buffer-config"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
anyhow = "1"
bytes = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }
tokio-util = "0.7.7"

chapter-4-hello-buffer-config-common = { path = "../common" }

[[bin]]
name = "chapter-4-hello-buffer-config"
path = "src/main.rs"
